<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Day 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exit_string">Exit</string>
    <string name="make_red">Make Red</string>
    <string name="make_white">Make White</string>
    <string name="make_blue">Make Blue</string>
    <string name="red_string">Red</string>
    <string name="white_string">White</string>
    <string name="blue_string">Blue</string>
    <string name="no_change">Did not want to change the background</string>
    <string name="really_change_color">Really change color to %1$s?</string>
    <string name="change_color_prompt">Change color</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="enter_name_text_view">Enter your name:</string>
    <string name="win_button_text">Win</string>
    <string name="lose_button_text">Lose</string>
    <string name="secret_info_text_view">Your secret info: %1$s</string>
    <string name="scoreboard_text_view">Scoreboard</string>
    <string name="join_game_button_text">Join</string>
    <string name="no_scores_text_view">No Scores Yet</string>
    <string name="user_score">%1$s: %2$d Wins, %3$d Losses</string>

</resources>
