<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/scoreboard_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_scores_text_view"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:visibility="visible"
        android:id="@+id/no_scores_text_view_id"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/score_list_view"
        android:visibility="gone">

    </ListView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_game_button_text"
        android:onClick="onJoinGameButton"/>

</LinearLayout>
